README: correct url of meta-fsl-arm-extra
Signed-off-by: Max Krummenacher <max.krummenacher@toradex.com>
Acked-by: Stefan Agner <stefan.agner@toradex.com>

--- a/README
+++ b/README
@@ -29,7 +29,7 @@ This layer depends on:
   branch: jethro
   revision: HEAD
 
-  URI: git://git.yoctoproject.org/meta-fsl-arm-extra
+  URI: https://github.com/Freescale/meta-fsl-arm-extra
   branch: jethro
   revision: HEAD
 
