layer.conf: remove machine include
If the user defines the machine to build in local.conf the
environment variable ${MACHINE} is not available when
conf/layer.conf gets parsed. Remove the include in favor of
including from local.conf.

Signed-off-by: Stefan Agner <stefan.agner@toradex.com>
Acked-by: Marcel Ziswiler <marcel.ziswiler@toradex.com>

--- a/conf/machine/include/README
+++ b/conf/machine/include/README
@@ -1,1 +1,2 @@
-The ${MACHINE}.inc files get included from this layers layer.conf
+The ${MACHINE}.inc files net to get included from machine config or
+local.conf.
