machines: fix spelling in comment
Signed-off-by: Marcel Ziswiler <marcel.ziswiler@toradex.com>
Acked-by: Max Krummenacher <max.krummenacher@toradex.com>

--- a/conf/machine/include/README
+++ b/conf/machine/include/README
@@ -1,2 +1,2 @@
-The ${MACHINE}.inc files net to get included from machine config or
+The ${MACHINE}.inc files need to get included from machine config or
 local.conf.
