--- a/README
+++ b/README
@@ -8,8 +8,11 @@ For more information on available Toradex COMs please visit:
 
 https://www.toradex.com/computer-on-modules
 
-The layer amends to the community BSP in meta-fsl-arm and meta-fsl-arm-extra.
-It contains stuff which has not yet been upstreamed to the community BSP.
+Note that the master branch of the layers is where the development is
+happening. Do expect build breakage and do not expect us to give a solution.
+If you need a more stable base use one of the release branches.
+toradex-bsp-platform may have a master manifest tagged to specific layer
+versions which likely is more stable than using HEAD.
 
 Dependencies
 ============
@@ -17,24 +20,24 @@ Dependencies
 This layer depends on:
 
   URI: git://git.openembedded.org/bitbake
-  branch: 1.36
+  branch: master
   revision: HEAD
 
   URI: git://git.openembedded.org/openembedded-core
   layer: meta
-  branch: rocko
+  branch: master
   revision: HEAD
 
     URI: git://git.yoctoproject.org/meta-freescale
-  branch: rocko
+  branch: master
   revision: HEAD
 
   URI: https://github.com/Freescale/meta-freescale-3rdparty.git
-  branch: rocko
+  branch: master
   revision: HEAD
 
   URI: git://git.toradex.com/meta-toradex-bsp-common
-  branch: rocko
+  branch: master
   revision: HEAD
 
 Patches
@@ -79,4 +82,4 @@ All metadata is MIT licensed unless otherwise stated. Source code and
 binaries included in tree for individual recipes is under the LICENSE
 stated in each recipe (.bb file) unless otherwise stated.
 
-This README document is Copyright (C) 2016 Toradex AG.
+This README document is Copyright (C) 2016-2019 Toradex AG.
