--- a/README
+++ b/README
@@ -17,24 +17,24 @@ Dependencies
 This layer depends on:
 
   URI: git://git.openembedded.org/bitbake
-  branch: 1.36
+  branch: 1.40
   revision: HEAD
 
   URI: git://git.openembedded.org/openembedded-core
   layer: meta
-  branch: rocko
+  branch: thud
   revision: HEAD
 
     URI: git://git.yoctoproject.org/meta-freescale
-  branch: rocko
+  branch: thud
   revision: HEAD
 
   URI: https://github.com/Freescale/meta-freescale-3rdparty.git
-  branch: rocko
+  branch: thud
   revision: HEAD
 
   URI: git://git.toradex.com/meta-toradex-bsp-common
-  branch: rocko
+  branch: thud
   revision: HEAD
 
 Patches
@@ -79,4 +79,4 @@ All metadata is MIT licensed unless otherwise stated. Source code and
 binaries included in tree for individual recipes is under the LICENSE
 stated in each recipe (.bb file) unless otherwise stated.
 
-This README document is Copyright (C) 2016 Toradex AG.
+This README document is Copyright (C) 2016-2020 Toradex AG.
